# weather-service

./: Cargo.toml  README.md
src/: main.rs  weather.rs
