[package]
name = "weather-service"
version = "0.1.0"
authors = ["Gloria Martinez <gloria.martinez@careesma.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
hyper = "0.12.35"
queryst = "2.0"
reqwest = "0.9.22"
serde_json = "1.0.41"
